CAY-1525 CharType: don't trim spaces on the left
CAY-1544 Remove jdk1.6 module from Cayenne sources
CAY-1545 cayenne-lifecycle Referenceable handler refactoring
CAY-1547 cayenne-lifecycle: support for setting UuidRelationships
CAY-1549 Migrate BatchQueryBuilderFactory to DI
CAY-1553 cayenne-lifecycle: @SortWeight annotation 

Bug Fixes Since 3.1M2:

CAY-1526 Preferences: java.lang.IllegalArgumentException: Key too long
CAY-1546 cayenne-lifecycle: UuidBatchFault concurrency issues
CAY-1555 Unpublished dependencies of Maven plugins
CAY-1575 Error generating Embeddable classes in Cayenne Modeler
CAY-1577 SQL queries for LIKE expressions with escape character generated with syntax errors

----------------------------------
Release: 3.1 M2
Date: 
----------------------------------
Changes/New Features Since 3.1M1:

CAY-1445 Initialize QueryCache via dependency injection
CAY-1508 Support for DataChannel filters
CAY-1509 Lifecycle event annotations support
CAY-1532 Import cayenne-lifecycle from sandbox
CAY-1533 Deprecate org.apache.cayenne.xml
CAY-1534 cayenne-lifecycle: implement AuditableFilter
CAY-1536 Expand deserialization context to provide Injector object instead of just a DataChannel.

Bug Fixes Since 3.1M1:

CAY-1511 Problem in db2: comparison operators are not supported on Clob object values.
CAY-1515 runtime relationships are not initialized
CAY-1516 CayenneModeler - DataMap deletion doesn't delete DataMap XML
CAY-1517 CayenneModeler - recent projects ordering is random
CAY-1519 Application deadlock trying to guess static constant fields
CAY-1528 Undo CAY-1213
CAY-1529 Cayenne should support enum types in qualifier statements/expression handling
CAY-1542 DI container is not shutting down Cayenne-managed connection pool

----------------------------------
Release: 3.1 M1
Date: 
----------------------------------
Changes/New Features Since 3.0:

CAY-952 Generate OUTER joins for flattened attributes in a SelectQuery